--- a/Web/Views/Home/TestUser.cshtml
+++ b/Web/Views/Home/TestUser.cshtml
@@ -7,29 +7,29 @@
 <h2>Test User</h2>
 @using (this.Html.BeginForm())
 {
-	@this.Html.AntiForgeryToken()
+	@Html.AntiForgeryToken()
 
 	<div class="form-horizontal">
 		<hr />
-		@this.Html.ValidationSummary(true, "", new { @class = "text-danger" })
-		@this.Html.HiddenFor(model => model.TestUserId)
+		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+		@Html.HiddenFor(model => model.TestUserId)
 
 		<div class="form-group">
-			@this.Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
-			@this.Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-			@this.Html.ValidationMessageFor(model => model.FirstName, "First Name is a required field", new { @class = "text-danger" })
+			@Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
+			@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.FirstName, "First Name is a required field", new { @class = "text-danger" })
 		</div>
 
 		<div class="form-group">
-			@this.Html.LabelFor(model => model.LastName, new { @class = "control-label" })
-			@this.Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-			@this.Html.ValidationMessageFor(model => model.LastName, "Last Name is a required field", new { @class = "text-danger" })
+			@Html.LabelFor(model => model.LastName, new { @class = "control-label" })
+			@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.LastName, "Last Name is a required field", new { @class = "text-danger" })
 		</div>
 
 		<div class="form-group">
-			@this.Html.LabelFor(model => model.EmailAddress, new { @class = "control-label" })
-			@this.Html.EditorFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
-			@this.Html.ValidationMessageFor(model => model.EmailAddress, "Email Address is a required field", new { @class = "text-danger" })
+			@Html.LabelFor(model => model.EmailAddress, new { @class = "control-label" })
+			@Html.EditorFor(model => model.EmailAddress, new { htmlAttributes = new { @class = "form-control" } })
+			@Html.ValidationMessageFor(model => model.EmailAddress, "Email Address is a required field", new { @class = "text-danger" })
 		</div>
 		<div class="form-group">
 			<button class="btn btn-default"><a href="/">Cancel</a></button>
