--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h3>Test Users</h3>
 <a class="btn btn-primary" href="@Url.Action("TestUser", "Home", new {id = 0})"><i class="fa fa-lg fa-user"></i> Add User</a>
-<table class="table table-striped">
+<table class="table table-striped" id="TestUsers">
     <thead>
         <tr>
             <th>First Name</th>
