--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,6 @@
     @Scripts.Render("~/bundles/bootstrap")
 
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-    @*<script src="~/Scripts/bootstrap.min.js"></script>*@
     <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 
     <script type="text/javascript">
@@ -71,6 +70,6 @@
 </div>
 
 
-@RenderSection("scripts", required: false)
+@RenderSection("scripts", false)
 </body>
 </html>
